fix: make paragraphs full width on tablet

--- a/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
@@ -15,11 +15,6 @@
   margin-left: -$spacing-05;
   padding-left: $spacing-05;
 
-  // 6 col
-  @include carbon--breakpoint('md') {
-    width: 75%;
-  }
-
   // 8 col
   @include carbon--breakpoint('lg') {
     width: 66.667%;
